z-index fixes

--- a/scss/components/_nav.scss
+++ b/scss/components/_nav.scss
@@ -6,6 +6,7 @@ $line-height: 3px;
 	left: 0;
 	right: 0;
 	pointer-events: none;
+	z-index: 100;
 	@include media-query(palm) {
 		bottom: auto;
 		top: 0;
