--- a/scss/components/_prevnext.scss
+++ b/scss/components/_prevnext.scss
@@ -6,6 +6,7 @@
 	width: 100vw;
 	left: 0;
 	position: absolute;
+	z-index: 200;
 	@include media-query(palm) {
 		flex-direction: row;
 	}
